@@ -1,3 +1,13 @@
+Sun Apr 10 18:44:22 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
+	
+	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp
+	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp
+	* DAnCE/Config_Handlers/ccd.cpp
+	* DAnCE/Config_Handlers/ccd.hpp
+
+	Regenerated the handlers to reflect the changes in the previous
+	commit. 
+	
 Sat Apr 09 18:35:23 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
 
         * docs/schema/Basic_Deployment_Data.xsd
